--- a/index.html
+++ b/index.html
@@ -8,37 +8,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-<div class="nav">
-    <button id="show-signup">Sign Up</button>
-    <button id="show-login">Login</button>
-    <p id="welcome-message" style="display: none;"><span id="user-name"></span></p>
-</div>
 
-<h1 id="login-title" style="display: none;">Login</h1>
-<h1 id="signup-title" style="display: none;">Sign Up</h1>
-<h1 id="todo-title" style="display: none;">Todo List</h1>
-
-<div class="auth-container" id="auth-container">
-    <div class="login-form">
-        <label>Email</label>
-        <input type="text" id="username" placeholder="Value">
-        <label>Password</label>
-        <input type="password" id="password" placeholder="Value">
-        <button id="login-btn">Sign In</button>
-        <p id="login-error" class="error" style="display: none;">Nieprawidłowe dane logowania</p>
-    </div>
-
-    <div class="signup-form" style="display: none;">
-        <label>Email</label>
-        <input type="text" id="signup-username" placeholder="Value">
-        <label>Password</label>
-        <input type="password" id="signup-password" placeholder="Value">
-        <button id="signup-btn">Register</button>
-        <p id="signup-error" class="error" style="display: none;">Please fill in all fields</p>
-    </div>
-</div>
-
-<div class="container todo-app" style="display: none;">
+<div class="container todo-app">
     <div class="todo-input-container">
         <input type="text" id="task-input" class="task-input" placeholder="Add Task">
         <button id="add-task-btn">
