--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
 <div class="container">
     <form id="loginForm">
         <label>Email</label>
-        <input type="text" id="username" placeholder="Value">
+        <input type="email" id="username" placeholder="Value">
         <label>Password</label>
         <input type="password" id="password" placeholder="Value">
         <button type="submit">Sign In</button>
